--- a/style.css
+++ b/style.css
@@ -1,58 +1,150 @@
-body {
-    margin: 0 10%;
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@500&family=Roboto&display=swap');
+
+* {
+    box-sizing: border-box;
 }
 
-header {
-    margin-top: 7%;
+nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
+    margin: 0 15%;
 }
 
-.logo-principal {
-    color: white;
-    width: 150px;
-    height: 150px;
-    background-color: black;
+.BKH__logo {
+    height: 20rem;
 }
 
+.BKH__wzp {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 1.3rem;
+    background-color: #FFD600;
+    color: black;
+    letter-spacing: 5px;
+    text-decoration: none;
+    border: 2.5px solid black;
+    border-radius: 10px;
+    padding: 9px 15px 7px 20px;
+    transition: 200ms;
+}
 
-.imoveis {
+.BKH__wzp:hover {
+    background-color: #ff9100;
+}
+
+main {
+    margin: 0 5%;
+}
+
+.tittle {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
     margin-top: 7%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
+
 }
 
-.titulo-imoveis {
-    font-size: 28px;
+.subtittle {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 35px;
+    margin-bottom: 5%;
 }
 
-.slides-imoveis {
+.carbon__slides {
     display: flex;
     margin-top: 5%;
+    margin-right: 5%;
+    justify-content: space-around;
 }
 
-.img-imovel {
-    width: 250px;
-    height: 250px;
-    background-color: black;
+.carbon__aps {
+    text-align-last: end;
 }
 
-.about-tittle {
-    margin: 7% 0;
-    font-size: 28px;
+.carbon__aps ul {
+    margin: 7% 0 0;
 }
 
-footer a {
+.carbon__aps li {
     display: flex;
-    justify-content: center;
-    margin: 7% 0;
+    align-items: center;
+    justify-content: end;
+    font-size: 18px;
+    margin: 0 0 3%;
+    font-family: 'Roboto', sans-serif;
 }
 
-footer p {
+.carbon__aps li::after {
+    content: '\2022';
+    margin: 0 4px;
+    color: black
+}
+
+.carbon__ed {
+    width: 25rem;
+    height: 30rem;
+    border-radius: 3%;
+}
+
+.carbon__specs ul {
+    margin: 7% 0 0;
+}
+
+.carbon__specs li {
     display: flex;
-    justify-content: center;
-    margin-bottom: 2%;
+    align-items: center;
+    font-size: 18px;
+    margin: 0 0 3%;
+    font-family: 'Roboto', sans-serif;
+}
+
+.carbon__specs li::before {
+    content: '\2022';
+    margin: 0 4px;
+    color: black
+        /* cor da bolinha */
+}
+
+.carbon__specs span {
+    font-weight: bold;
+    margin-left: 0.25rem;
+}
+
+.vale__slides {
+    margin-left: 7%;
+}
+
+footer {
+    background-color: #FFD600;
+}
+
+.subtittle_about {
+    padding-top: 2%;
+    margin-top: 9%;
+    text-align: center;
+    margin-bottom: 1%;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 35px;
+}
+
+.about__text {
+    font-family: 'Roboto', sans-serif;
+    margin: 0 25%;
+    text-align: center;
+}
+
+.insta {
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    margin: 1% 0;
+}
+
+.copyright {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    padding-bottom: 1%;
 }
