--- a/style.css
+++ b/style.css
@@ -4,12 +4,19 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+    height: 100vh;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
     margin: 0 15%;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .BKH__logo {
@@ -33,86 +40,51 @@ nav {
     background-color: #ff9100;
 }
 
-main {
-    margin: 0 5%;
-}
-
 .tittle {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 40px;
-    margin-top: 7%;
+    margin: 7% 0 5%;
     text-align: center;
 
 }
 
 .subtittle {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 35px;
-    margin-bottom: 5%;
+    margin: 5% 0;
+    white-space: initial;
 }
 
 .carbon__slides {
-    display: flex;
-    margin-top: 5%;
-    margin-right: 5%;
-    justify-content: space-around;
+    background-color: #FFD600;
+    width: 65%;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-.carbon__aps {
-    text-align-last: end;
+.carbon__specs {
+    white-space: nowrap;
+    display: inline-block;
+    vertical-align: top;
+    width: 35%;
+    margin-top: 1%;
+    margin-left: 5%;
+
 }
 
-.carbon__aps ul {
-    margin: 7% 0 0;
-}
-
-.carbon__aps li {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    font-size: 18px;
-    margin: 0 0 3%;
-    font-family: 'Roboto', sans-serif;
-}
-
-.carbon__aps li::after {
-    content: '\2022';
-    margin: 0 4px;
-    color: black
+.carbon__specs__loc {
+    text-align: left;
 }
 
 .carbon__ed {
-    width: 25rem;
-    height: 30rem;
-    border-radius: 3%;
+    display: inline-block;
+    width: 50%;
 }
 
-.carbon__specs ul {
-    margin: 7% 0 0;
-}
-
-.carbon__specs li {
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    margin: 0 0 3%;
-    font-family: 'Roboto', sans-serif;
-}
-
-.carbon__specs li::before {
-    content: '\2022';
-    margin: 0 4px;
-    color: black
-        /* cor da bolinha */
-}
-
-.carbon__specs span {
-    font-weight: bold;
-    margin-left: 0.25rem;
-}
-
-.vale__slides {
-    margin-left: 7%;
+.carbon__ed__img {
+    width: 100%;
+    border-radius: 10px;
 }
 
 footer {
@@ -124,7 +96,7 @@ footer {
     margin-top: 9%;
     text-align: center;
     margin-bottom: 1%;
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 35px;
 }
 
@@ -134,17 +106,40 @@ footer {
     text-align: center;
 }
 
-.insta {
-    font-family: 'Roboto', sans-serif;
-    color: black;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    margin: 1% 0;
-}
-
 .copyright {
     font-family: 'Roboto', sans-serif;
     text-align: center;
     padding-bottom: 1%;
+}
+
+@media screen and (max-width: 600px) {
+    .carbon__slides {
+        display: flex;
+        flex-direction: column;
+        background-color: #FFF;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .carbon__specs {
+        white-space: nowrap;
+        display: inline-block;
+        vertical-align: top;
+        margin: 0;
+    }
+
+    .carbon__specs__loc {
+        text-align: center;
+    }
+
+    .carbon__ed {
+        display: block;
+        width: 100%;
+    }
+
+    .carbon__ed__img {
+        width: 100%;
+        border-radius: 0;
+    }
 }
