--- a/style.css
+++ b/style.css
@@ -1,6 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@500&family=Roboto&display=swap');
 
 * {
+    overflow: hidden;
+}
+
+body {
+    display: flex;
+
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    background-image: url(assents/WhatsApp\ Image\ 2023-05-03\ at\ 1.53.08\ PM.jpeg);
+    background-repeat: no-repeat;
+}
+
+h1 {
+    margin: 7%;
+    text-align: center;
+}
+
+/* h1 {
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    color: #FFF;
+    text-shadow: #000 2px 3px 2px;
+    margin-top: 4%;
+    font-size: 50px;
+} */
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30%;
+    background-color: #FFF;
+    box-shadow: 0px 0px 50px 0px #000;
+}
+
+h2 {
+    
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    font-size: 50px;
+}
+
+.btn {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 24px;
+    border: 0;
+    color: #000;
+    
+    text-decoration: none; 
+    padding: 2.5% 5%;
+    border-radius: 50px;
+    border: 5px solid #000;
+    transition: 200ms;
+    letter-spacing: 5px;
+}
+
+.btn:hover {
+    background-color: #000;
+    color: #FFF;
+}
+
+ /*
+
+* {
     box-sizing: border-box;
 }
 
@@ -187,4 +255,4 @@ strong {
         border-radius: 0;
     }
 }
-
+ */
