--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@500&family=Roboto&display=swap');
 
-* {
+html {
     overflow: hidden;
 }
 
@@ -88,11 +88,9 @@ h2 {
 
     main {
         flex-direction: column;
-        height: 100vh;
     }
 
     .container {
-        
         width: 100vw;
         height: 50%;
         background-size: 100vw 70vh;
@@ -105,17 +103,16 @@ h2 {
     aside {
         width: 100%;
         height: 50%;
-        
     }
 
     h2 {
-        
         font-size: 2.7em;
         margin-top: 5%;
     }
 
-    .ul {
-        display: inline-block;
+    ul {
+        padding-bottom: 5%;    
+
     }
 
 }
