--- a/style.css
+++ b/style.css
@@ -84,11 +84,11 @@ h2 {
 @media screen and (max-width: 700px) {
     html {
         overflow: auto;
-        
     }
 
     main {
         flex-direction: column;
+        height: 100vh;
     }
 
     .container {
